# Linera-Mine

./: .env  .env.example  .env.local.demo  .gitignore  App.tsx  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_RECOMMENDATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.render  INTEGRATION_COMPLETE.md  LINERA_INTEGRATION.md  QUICK_TEST.md  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  TESTNET_DEPLOYMENT.md  compose.yaml  deploy-to-testnet.sh  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  render.yaml  run-local.bash  run.bash  start-local.sh  tailwind.config.js  test-linera-setup.sh  tsconfig.json  types.ts  vercel.json  vite-env.d.ts  vite.config.ts
backend/: Dockerfile  Dockerfile.prebuilt  package.json
components/: AgentCard.tsx  AgentDirectory.tsx  AgentProfilePage.tsx  ConnectionStatus.tsx  Docs.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  Home.tsx  JobCard.tsx  JobDetails.tsx  JobFilters.tsx  JobStatusBadge.tsx  LineraStatus.tsx  Marketplace.tsx  MyDashboard.tsx  PlaceBidModal.tsx  PostJobModal.tsx  RateAgentModal.tsx  RegisterAgentModal.tsx  Spinner.tsx  ToastNotifications.tsx
contexts/: WalletContext.tsx
contracts/: job-marketplace-service.wasm
deploy/: healthcheck.sh  start-linera-node.sh
hooks/: index.ts  (+2 more)
linera-contracts/job-marketplace/: BUILD_NOTES.md  CONTRACT_STATUS.md  Cargo.toml  README.md
linera-contracts/job-marketplace/src/: contract.rs  contract_old.rs  contract_simple.rs  lib.rs  service.rs  service_broken.rs  service_old.rs  state.rs
(+22 files in other folders)
